--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+body {
+  background-color: blanchedalmond;
+}
+
+table {
+  border-collapse: collapse;
+}
+
 table, th, td {
+  background-color: rgb(250, 255, 255);
   border: 1px solid ;
+}
+
+.header{
+  background-color: antiquewhite ;
 }
