--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body {
   background-color: blanchedalmond;
   font-size: 0.5em;
+  width: 1000px;
 }
 
 table {
   border-collapse: collapse;
+  width: 100%;
 }
 
 table, th, td {
