--- a/style/css-sheet.css
+++ b/style/css-sheet.css
@@ -25,3 +25,15 @@
 #div3 .green{
   color: green;
 }
+
+#div4 .green > span{
+  color: green;
+}
+
+#div4 h2 + p {
+  background-color: rgba(255, 255, 0, 0.31);
+}
+
+#div4 h2 ~ p {
+  font-style: oblique;
+}
