--- a/style/css-sheet.css
+++ b/style/css-sheet.css
@@ -51,5 +51,23 @@
 }
 
 /*2-6:擬似要素*/
+#div6 input:focus{
+  background-color: yellow;
+}
+
+#div6 .blue a:hover{
+  color: aquamarine;
+}
+
+#div6 .green a:visited{
+  color:red;
+}
+
+#div6 .add a:link{
+  background-color: aquamarine;
+}
+#div6 .add a:visited{
+  background-color: red;
+}
 
 /*2-7:構造的な擬似要素*/
